err/fetcher.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/fetcher'...
Compiling './lib/python3.5/site-packages/fetcher/fetcher.py'...
***   File "./lib/python3.5/site-packages/fetcher/fetcher.py", line 113
    print ct
           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/fetcher-0.9.2.6.egg-info'...
Listing './lib/python3.5/site-packages/nchecker'...
Compiling './lib/python3.5/site-packages/nchecker/nchecker.py'...
***   File "./lib/python3.5/site-packages/nchecker/nchecker.py", line 34
    print self.href, data
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Compiling './lib/python3.5/site-packages/tests/lazyio_tests.py'...
***   File "./lib/python3.5/site-packages/tests/lazyio_tests.py", line 72
    print bd.buffer.len, "fdsafdsfdsfsdfdsfs"
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tests/upload_tests.py'...
***   File "./lib/python3.5/site-packages/tests/upload_tests.py", line 47
    print "parsed qs:>>", m
                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tests/webpyserver.py'...
***   File "./lib/python3.5/site-packages/tests/webpyserver.py", line 24
    print ">>>>>>>>>>>>>>", web.input()
                         ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
